# Fast-Portrait-Segmentation

./: .gitignore  CMakeLists.txt  FaceSeg.sln  FaceSeg开发完整记录.txt  README.md
FaceSeg/: FaceSeg.cpp  FaceSeg.vcxproj  FaceSeg.vcxproj.filters  out.txt
FaceSegDll/: FaceSegDll.vcxproj  FaceSegDll.vcxproj.filters  model.cpp  model.h  process.cpp  process.h
FaceSegLib/: CMakeLists.txt
FaceSegLib/include/: model.h  process.h
FaceSegLib/src/: model.cpp  process.cpp
pyFaceSeg/: Dnc_SINet_bi_192_128.mnn  Dnc_SINet_bi_256_160.onnx  Dnc_SINet_bi_256_160_fp16.mnn  Dnc_SINet_bi_320_256.mnn  Dnc_SINet_bi_320_256.onnx  cam_seg.py  requirements.txt  runIE.py  test_opencv_facedet.py
pyFaceSeg/model/: Dnc_SINet_bi_192_128.onnx  Dnc_SINet_bi_256_160.mnn
test/: testPreprocess.cpp
testPreprocess/: testPreprocess.cpp  testPreprocess.vcxproj  testPreprocess.vcxproj.filters
x64/Run/: Dnc_SINet_bi_256_192_fp16.mnn  opencv_face_detector.pbtxt
